# 3D-Data-Processing

./: .gitignore  .gitmodules  README.md
3DP_lab_1/: CMakeLists.txt  ReadMe.md  main.cpp  sgm.cpp  sgm.h
3DP_lab_3/: README.md
3DP_lab_3/Result/: Bunny_lm.ply  Bunny_svd.ply  Dragon_lm.ply  Dragon_svd.ply  Vase_lm.ply
3DP_lab_3/src/: Registration.cpp
3DP_lab_4/: TinyPointNet_Point_Cloud_3D_Descriptors.ipynb
